fix donate page on mobile

--- a/src/app/styles/donate.module.css
+++ b/src/app/styles/donate.module.css
@@ -2,20 +2,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh - 107px);
+    flex-direction: column;
 }
 
 .div {
     display: flex; /* Use flexbox */
     flex-direction: column;
     align-items: center;
-    width: 25vw;
+    width: 64vw;
 }
 
 .img {
     border-radius: 6px;
-    display: flex;
-    align-items: center;
     padding-top: 48px;
 }
 
@@ -37,7 +36,35 @@
 /* laptop */
 @media (min-width: 1024px) and (max-width: 2499px) and (orientation: landscape) {
     .main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: calc(100vh - 107px);
+    }
+
+    .div {
+        display: flex; /* Use flexbox */
+        flex-direction: column;
+        align-items: center;
+        width: 25vw;
+    }
+
+    .img {
+        border-radius: 6px;
+        display: flex;
+        align-items: center;
+        padding-top: 48px;
+    }
+
+    .stripe {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .p {
+        justify-content: center;
+        align-items: center;
+        width: auto;
     }
 }
 
